# spot_multicam_ws

./: .gitignore  README.md
src/spot_multicam/: package.xml  setup.cfg  setup.py
src/spot_multicam/config/: camera_transforms.yaml  multi_camera_params.yaml  single_camera_params.yaml
src/spot_multicam/launch/: full_system.launch.py  multi_camera.launch.py  single_camera.launch.py
src/spot_multicam/spot_multicam/: camera_capture_node.py  camera_tf_broadcaster.py  capture_action_server.py  ids_camera_backend.py  mock_camera_backend.py
src/spot_multicam/spot_multicam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/spot_multicam/spot_multicam/mission/: capture_controller.py  capture_mission_service.py
src/spot_multicam/test/: manual_test_capture_mission_service.py  test_camera_capture_node.py
src/spot_multicam_msgs/: CMakeLists.txt  package.xml
src/spot_multicam_msgs/action/: CaptureAction.action
src/spot_multicam_msgs/msg/: CaptureMetadata.msg
