<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_multicam_msgs</name>
  <version>0.1.0</version>
  <description>
    Custom ROS2 message definitions for the spot_multicam package.
    Kept in a separate package because ROS2 requires message definitions
    to live in their own package (rosidl generates code that the consumer
    package then depends on).
  </description>
  <maintainer email="rohithbr@gmx.de">Rohith Belur Ravish</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
